feat: Fixed compiler warnings and made optimizations